...
        imageView.layer.borderColor = isCorrectAnswer ? UIColor.ypGreen.cgColor : UIColor.ypRed.cgColor
    }
    
    func showResult(quiz result: QuizResultsViewModel) {
        let message = presenter.makeResultsMessage()
        let model = AlertModel(
            id: "Game results",
            title: result.title,
            message: message,
            buttonText: result.buttonText) { [weak self] in
                guard let self = self else { return }
                self.presenter.restartGame()
            }
...
